# ChangeLog for app-office/texmacs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/texmacs/ChangeLog,v 1.100 2012/03/19 08:47:38 grozin Exp $

*texmacs-1.0.7.15 (19 Mar 2012)

  19 Mar 2012; Andrey Grozin <grozin@gentoo.org> -texmacs-1.0.7.13.ebuild,
  +texmacs-1.0.7.15.ebuild:
  Version bump

*texmacs-1.0.7.14 (19 Oct 2011)

  19 Oct 2011; Andrey Grozin <grozin@gentoo.org> -texmacs-1.0.7.12.ebuild,
  +texmacs-1.0.7.14.ebuild:
  Version bump

*texmacs-1.0.7.13 (22 Sep 2011)

  22 Sep 2011; Andrey Grozin <grozin@gentoo.org> -texmacs-1.0.7.11.ebuild,
  +texmacs-1.0.7.13.ebuild:
  Version bump

*texmacs-1.0.7.12 (08 Sep 2011)

  08 Sep 2011; Andrey Grozin <grozin@gentoo.org> -texmacs-1.0.7.10-r1.ebuild,
  +texmacs-1.0.7.12.ebuild:
  Version bump

*texmacs-1.0.7.11 (07 Sep 2011)

  07 Sep 2011; Andrey Grozin <grozin@gentoo.org> -texmacs-1.0.7.2.ebuild,
  +texmacs-1.0.7.11.ebuild:
  Version bump

  02 Apr 2011; Raúl Porcel <armin76@gentoo.org> texmacs-1.0.7.2-r1.ebuild:
  alpha/sparc stable wrt #337532

  24 Mar 2011; Markos Chandras <hwoarang@gentoo.org> texmacs-1.0.7.2-r1.ebuild:
  Stable on amd64 wrt bug #337532

  23 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  texmacs-1.0.7.2-r1.ebuild:
  ppc stable wrt #337532

  22 Mar 2011; Thomas Kahle <tomka@gentoo.org> texmacs-1.0.7.2-r1.ebuild:
  x86 stable per bug 337532

*texmacs-1.0.7.10-r1 (17 Mar 2011)

  17 Mar 2011; Andrey Grozin <grozin@gentoo.org> +texmacs-1.0.7.2-r1.ebuild,
  -texmacs-1.0.7.9.ebuild, -texmacs-1.0.7.10.ebuild,
  +texmacs-1.0.7.10-r1.ebuild, +files/texmacs-mupad.patch:
  Fix LD_LIBRARY_PATH in tm_mupad_help, bug #337532

*texmacs-1.0.7.10 (07 Mar 2011)

  07 Mar 2011; Andrey Grozin <grozin@gentoo.org> -texmacs-1.0.7.8.ebuild,
  +texmacs-1.0.7.10.ebuild:
  Version bump

  07 Mar 2011; Justin Lecher <jlec@gentoo.org> texmacs-1.0.7.2.ebuild,
  texmacs-1.0.7.8.ebuild, texmacs-1.0.7.9.ebuild: