@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX TeXmacs.desktop 268 RMD160 92ca6c7c75a6e1edd671c2e5f766140382107ebb SHA1 f917105f37a16393ff8f6e1be111a9f00733de41 SHA256 9872d60c5080260a3dcc842cf1f74557954b0830b204ffc0e255f7ee52a13825
 AUX texmacs-ldflags.patch 3389 RMD160 981eec8bff794ed4f619a24fbda000ffe5d9f03c SHA1 caf6d40badfd07ec897ad323b95b49a1f65d80e4 SHA256 23e0514e1bfaed93c60b0ceae050dd6dbf0dfebb43fb08712c4db5b6288d6b3a
 AUX texmacs-mupad.patch 693 RMD160 5d4c2c2139393391f44a08c0671824a2eaf10e22 SHA1 aed3295d14fca58a219d0084790ffebca2f14e5b SHA256 c01e7c28847d0f66721438b764de66f806ec5980d4d27afb9ed4e0414364d714
@@ -7,7 +10,24 @@ DIST TeXmacs-1.0.7.15-src.tar.gz 15128281 RMD160 3e63266f8396c633b12090656b96c4f
 DIST TeXmacs-1.0.7.2-src.tar.gz 4763348 RMD160 06c8a9c93f79a576daf365ec229e98229f8563d0 SHA1 f011f4ef2b36b3f6531ecdadf96800105301b45d SHA256 98ca44418f4d4644bdee03add2e2baf18f0839d4d8336189ff4a095329f7a2ba
 DIST TeXmacs-600dpi-fonts.tar.gz 2899193 RMD160 b5a27a59ed0c178f94836b828d12d3534b506582 SHA1 0a3a279b842b63f55449856690483d07c6e1219c SHA256 e8eeb3c97a1405fd037b0567f683a6d2225d47c7829893b9768bd6c1c707cc81
 EBUILD texmacs-1.0.7.14.ebuild 1376 RMD160 36c5886f21d55e3dd1860ef614c050a29f9e6163 SHA1 4f6fb08ebfd1e494cd1a37ef140e476880fa6332 SHA256 c4f7646103d93a87539eb725089558f9bbcd53230bce81ac1f8db78c621db2dc
-EBUILD texmacs-1.0.7.15.ebuild 1376 RMD160 717718201fe02e7bc4b6d61136930998d65dab78 SHA1 757710f77844e42ff0481c7e394498bd27a6542c SHA256 794b453da1d1bbcc50e2d6093b40137c97aadfd0f0eaac1973f000c1496a3b62
+EBUILD texmacs-1.0.7.15.ebuild 1353 RMD160 c862a05fa24bfe16173e3726e32e1e495d898da2 SHA1 3ec73ecc2bf7206e1e386cfbb5841f887f2f0990 SHA256 5bb7830d6c5b1d6f1060063980a919eeaedb32cfdf8ff93c2997c6529b0ec950
 EBUILD texmacs-1.0.7.2-r1.ebuild 1610 RMD160 01aba5375749b683a82e161f1dffec96e32cbbdb SHA1 2a7eaa1d8f27bce211392e4162929aac6d4bdafd SHA256 b23f53d200a9b2f3c99ecfbdbaa97ed9262df42ee0ae2a1191067f761fb1c322
-MISC ChangeLog 16327 RMD160 378fe56642fac24673114835ed9deac89fdb3aac SHA1 d5042681240efd6dd08cdf30b8161021c968a787 SHA256 b87a8a49a452b88949cc429cd1f941651db251690ab0adffdf8964b904b2c596
+MISC ChangeLog 16432 RMD160 2bb43ef81a770b18df19ceb9f6ba09fbda02cd73 SHA1 56f9b82e4563801346dc293a147df67c84f71db3 SHA256 dc6a436c1b3620fec87827a23a120b463505269e8b14949780f306b7906a27d5
 MISC metadata.xml 346 RMD160 2c1ba8a5aa56c0547c8ca42baca77d46bdd5e6e7 SHA1 1fd3a62650f23d156dac006d2051b3fb22e57057 SHA256 992c947e112a6a4244e57336294ce5020079f90612f2d0093879a85814928813
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQIcBAEBAgAGBQJPlqkAAAoJEOSiRoyO7jvoECYP+wcd4Bt7eepEctx8ayaOBPW4
+rIBwuo5xQqjuxlzSak5V4W0mLQHFVYHlpDZhSwSIIsSkG/ImA7ZQTLQ5hEVpafQ7
+VZNRVFqv016xLsHbGByXrEVh2BeXKOwmfbZjioVNLwsZHq+jWZ6EgyKKgvl3mKpk
++JHk4+whfMJRg+Jkujw6jhFzHB65tFYEmp1VyUqWmpiThtZ52jHm0OfFgDt68NgT
+u36By5EsutaB3d+GkIzk1DIA/0JvMEQ8QMATKATyDGkvDBVTCuBnwlwouDoviRX+
+sE/drk2dyY4GKE1wPQuAWzRdzriOFqYLxZNYWDhxX/g7L2E4u7wH13s81Dbj2aE3
+0ximzPpoyycqw+GHZm4r6eDrYaKaTU4mc7u0ZfBVwok4Xk2VB9Wm088XQaMlAVPs
+BSQXTc/aJn/fzscEKe9os1Zz9gkAh9j1P7WF1uIhzw6TmhucHNmGTmNspte2uS89
+WgFkY2eCdRn8xwACfsZMubNtdS+r9t1PB0+f9zbIrRJB8WLomQK+kyfYSzJl3ogl
+XWkkbn0PZvH4/Izbn/sNW+GD051z6qQNGssRFbWia/Y+RP7JbGTp6650+iOBlHV5
+REZdEOTKYSyky782Z7ycc/pGh+oNyAKNtVNtTDXmTTw25hlzzdR/cbvUC78YVljM
+M/wxg4HIRcs0L+8lYiob
+=bBUA
+-----END PGP SIGNATURE-----
